--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,22 +10,23 @@ source:
   sha256: 0e928e9a07566b7b8d781169f5fa1bcd9e7ae196317d4a433b692802bed499e6
 
 build:
+  noarch: python
   number: 1
 
 outputs:
   - name: {{ name }}
     build:
       noarch: python
-      script: python -m pip install . -vv
+      script: python -m pip install . -vv --no-deps --no-build-isolation
     requirements:
       host:
-        - python >=3.7,<3.12
+        - python {{ python_min }}
         - hatchling >=1.3.1
         - jupyterlab >=4.0,<5
         - pip
         - hatch-jupyter-builder
       run:
-        - python >=3.7,<3.12
+        - python >={{ python_min }},<3.12
         - jupyter_server >=1.6,<3
         - traitlets >=5.0,<6
         - nbconvert >=7.0,<8
@@ -42,15 +43,21 @@ outputs:
       commands:
         - pip check
       requires:
+        - python {{ python_min }}
         - pip
 
   - name: jupyter-scheduler
     build:
       noarch: python
     requirements:
+      host:
+        - python {{ python_min }}
       run:
+        - python >={{ python_min }},<3.12
         - {{ pin_subpackage(name, exact=True) }}
     test:
+      requires:
+        - python {{ python_min }}
       imports:
         - jupyter_scheduler
 
